Major update: Flask web app with live news integration and batch model selection
- Replaced Streamlit with Flask web interface
- Added live news fetching via NewsAPI integration
- Implemented keyword-based sentiment analysis
- Added batch model selection (5 batches: 2013-2025)
- Updated prediction engine with realistic price estimation (1.5% cap)
- Added sentiment visualization with interactive bars
- Trained and integrated FinBERT-LSTM models (best: 78.27% AUC)
- Added PowerShell launchers (start_web.ps1, run_web.ps1)
- Cleaned up deprecated test scripts and documentation
- Updated README with current features and accurate metrics
- Fixed batch model loading for different file structures
- Added checkpoints and model metadata

--- a/version-2/requirements.txt
+++ b/version-2/requirements.txt
@@ -10,6 +10,7 @@ numpy>=1.21.0,<2.0.0
 pandas>=1.5.0,<3.0.0
 
 # Deep Learning Framework
+torch>=2.0.0
 tensorflow>=2.10.0,<2.16.0
 
 # Machine Learning
@@ -19,10 +20,20 @@ scikit-learn>=1.1.0,<2.0.0
 matplotlib>=3.5.0,<4.0.0
 seaborn>=0.11.0,<1.0.0
 
+# Live Market Data
+yfinance>=0.2.0
+
+# Live News Data
+newsapi-python
+
 # Jupyter Notebook
 jupyter>=1.0.0
 ipykernel>=6.0.0
 notebook>=6.4.0
+
+# Web Interface
+streamlit>=1.28.0
+flask>=2.3.0
 
 # ===================================================================
 # OPTIONAL PACKAGES (Recommended for full functionality)
